# zed-less

./: Cargo.toml  LICENSE  README.md  extension.toml
languages/less/: highlights.scm
src/: less.rs
