[package]
name = "zed_less"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
path = "src/less.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.6"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

